# pacman-for-kids

./: .gitignore  README.md  coins.py  config.py  game.py  ghost.py  maze.py  player.py  pyproject.toml
