[tool.poetry]
name = "pacman-for-kids"
version = "0.1.0"
description = ""
authors = ["David Mendes <mendesdd55@gmail.com>"]
readme = "README.md"
packages = [{include = "pacman_for_kids"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
